# qTox_enhanced__archive

./: CHANGELOG.md  CMakeLists.txt  README.md  flake.nix  io.github.qtox.qTox.desktop  res.qrc  simple_make.sh  verify-commit-messages.sh
.ci-scripts/: build-osx-deps.sh  build-qtox-linux.sh
.circleci/: config.yml
.github/actions/build-docker-image/: action.yml
.github/actions/load-docker-image/: action.yml
.github/workflows/: build-on-nixos.yml  build-test-deploy.yaml  commit-format.yaml  nixos.yaml  startup-tests.yml
.localrun/: .gitignore  Dockerfile  Dockerfile_ub18_hw_encoding  Dockerfile_ub20  docker_it.sh  docker_it_flatpak.sh  docker_it_nixos.sh  docker_it_ub18_hw_encoding.sh  docker_it_ub20.sh  docker_it_window.sh  run_me_qtox_ub20.sh
audio/include/audio/: iaudiocontrol.h  iaudiosettings.h
audio/src/backend/: openal.cpp
buildscripts/: build_libcurl_windows.sh  build_libx264.sh  build_libx264_windows.sh  build_nasm.sh  build_qt_linux.sh  build_qt_windows.sh  build_qt_windows_download_only.sh  build_toxcore.sh  build_toxcore_linux.sh  nixos_qtox.nix  nixos_qtox.txt  overlay.nix
buildscripts/docker/: Dockerfile.almalinux  Dockerfile.archlinux  Dockerfile.debian  Dockerfile.debian_old  Dockerfile.fedora  Dockerfile.flatpak_builder  Dockerfile.opensuse  Dockerfile.ubuntu_lts  Dockerfile.windows_builder
buildscripts/download/: download_libcurl.sh  download_libx264.sh  download_nasm.sh  download_qt.sh  download_toxcore.sh
buildscripts/patches/: add_tox_group_get_grouplist_function.patch  add_tox_group_get_grouppeerlist_functions.patch  msgv3_addon.patch  tc___capabilites.patch  tc___ftv2_capabilities.patch  tc___msgv2_and_ftv2_capabilities.patch
cmake/: Dependencies.cmake  Testing.cmake
cmake/warnings/: CMakeLists.txt
filter_audio/: C2.txt  C3.txt  CMakeLists.txt  filter_audio.c  filter_audio.h
filter_audio/zam/: filters.c
flatpak/: build.sh  io.github.qtox.qTox.json
osx/: Brewfile  Brewfile-DepBuildDeps
res/: nodes.json
src/: mainwindow.ui
src/chatlog/: chatmessage.cpp  chatmessage.h  chatwidget.cpp
src/core/: core.cpp  core.h  coreav.cpp  coreav.h  corefile.cpp  icorefriendmessagesender.h  icoregroupquery.h  icoresettings.h  miniaudio.h  toxfile.cpp  toxfile.h
src/model/: chathistory.cpp  chathistory.h  friend.cpp  friend.h  friendmessagedispatcher.cpp  friendmessagedispatcher.h  group.cpp  groupmessagedispatcher.cpp  groupmessagedispatcher.h  imessagedispatcher.h  message.cpp  message.h  sessionchatlog.cpp  sessionchatlog.h  status.cpp
src/model/chatroom/: friendchatroom.cpp  friendchatroom.h
src/net/: bootstrapnodeupdater.cpp  updatecheck.cpp  updatecheck.h
src/persistence/: history.cpp  history.h  settings.cpp  settings.h
src/persistence/db/upgrades/: dbupgrader.cpp  dbupgrader.h
src/video/: cameradevice.cpp  cameradevice.h  camerasource.cpp  ivideosettings.h  videoframe.cpp
src/widget/: friendwidget.cpp  groupwidget.cpp  groupwidget.h  widget.cpp  widget.h
src/widget/form/: addfriendform.cpp  addfriendform.h  filesform.cpp  groupinviteform.cpp  settingswidget.cpp
src/widget/form/settings/: aboutform.cpp  advancedform.cpp  (+8 more)
test/model/: friendmessagedispatcher_test.cpp
test/persistence/: offlinemsgengine_test.cpp
test/widget/: filesform_test.cpp
themes/dark/window/: general.css
tools/: fix-translation-files.sh
translations/: README.md  ar.ts  be.ts  ber.ts  bg.ts  bn.ts  cs.ts  da.ts  de.ts  el.ts  eo.ts  es.ts  et.ts  fa.ts  fi.ts  fr.ts  gl.ts  he.ts  hr.ts  hu.ts  is.ts  it.ts  ja.ts  jbo.ts  kn.ts  ko.ts  lt.ts  lv.ts  mk.ts  nl.ts  nl_BE.ts  no_nb.ts  pl.ts  pr.ts  pt.ts  pt_BR.ts  ro.ts  ru.ts  si.ts  sk.ts  (+14 more)
util/include/util/: toxcoreerrorparser.h
util/src/: toxcoreerrorparser.cpp
webrtc/: .gitignore  CMakeLists.txt  echo_control_mobile.c  echo_control_mobile.h
webrtc2/: CMakeLists.txt
webrtc2/webrtc/modules/audio_processing/aec/: aec_core.c  aec_rdft.c  echo_cancellation.c
webrtc2/webrtc/modules/audio_processing/aec/include/: echo_cancellation.h
webrtc6/: CMakeLists.txt
windows/cross-compile/: build.sh
(+2 files in other folders)
